# gtunes

./: .gitignore  README.md  audio.py  fzf-interact.py  gtune.py  parse.py  pyproject.toml  pytest.ini  requirements.txt  scrape.py  tune.py  tunes.db  tunes.md  tunes_list.db
gtunes/: audio.py  commands.py  db.py  fzf_interact.py  parse.py  scrape.py  spot_select.css  spot_select.py  tui.py  tune.py  util.py
gtunes/data/: bak.gtunes.db  example.db  gtunes.db
gtunes/scripts/: cli.py
src/: audio.py  gtune.py  output.csv  parse.py  scrape.py  tune.py  tunes.md
test/: test_scrape.py  test_spot_select.py
