[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtunes"
version = "2024.1.26"
readme = "README.md"
dependencies = [
    "beautifulsoup4",
    "requests",
    "spotipy",
    "Levenshtein",
    "peewee",
    "questionary"
]

[project.scripts]
gtn = "gtunes.scripts.cli:main"